final commit workstation

--- a/hiv_simulator/multiple_models_session.ipynb
+++ b/hiv_simulator/multiple_models_session.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -14,31 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "class simple_model():\n",
-    "    def __init__(self, scope1='model1', scope2='model2', vv=1.):\n",
+    "    def __init__(self, inp, scope1='model1', scope2='model2', vv=1.):\n",
     "        self.hidden_dim = 4\n",
     "        self.scope1 = scope1\n",
-    "        self.scope2 = scope2\n",
-    "        self.vv = vv\n",
     "        \n",
+    "        self.x = tf.placeholder(shape=[None,1], dtype=tf.float32, name='input')\n",
     "        self.model = self.create_model()\n",
     "        \n",
     "    def create_model(self):\n",
-    "        with tf.variable_scope(self.scope1, reuse=tf.AUTO_REUSE):\n",
-    "            self.x = tf.placeholder(shape=[None,1], dtype=tf.float32, name='input')\n",
-    "            self.hidden = tf.layers.dense(self.x, units=self.hidden_dim, name='hidden1')\n",
+    "        with tf.variable_scope(self.scope1):\n",
+    "            self.hidden = tf.layers.dense(self.input, units=self.hidden_dim, name='hidden1')\n",
     "        \n",
-    "        with tf.variable_scope(self.scope2, reuse=tf.AUTO_REUSE):\n",
-    "            self.intermediate = tf.get_variable(name='hidden1',\n",
-    "                                                initializer=tf.constant(self.vv, shape=[4,1]))\n",
     "            #tf.layers.dense(self.hidden, units=self.hidden_dim, name='hidden2')\n",
     "         \n",
-    "        with tf.variable_scope(self.scope1, reuse=tf.AUTO_REUSE):\n",
-    "            self.output = tf.layers.dense(self.intermediate, units=1, name='output')"
+    "            self.output = tf.layers.dense(self.hidden, units=4, name='output')"
    ]
   },
   {
@@ -79,22 +82,30 @@
     "\n",
     "gpu_options = tf.GPUOptions(per_process_gpu_memory_fraction=0.15)\n",
     "with tf.Session(config=tf.ConfigProto(gpu_options=gpu_options)) as sess:\n",
-    "    model2 = simple_model(scope1='model2', scope2='model1', vv=1.)\n",
-    "    model1 = simple_model(scope1='model1', scope2='model2', vv=2.)\n",
+    "    x = tf.placeholder(shape=[None,1], dtype=tf.float32, name='input')\n",
+    "    model2_run_output = tf.placeholder(shape=[None,1], dtype=tf.float32, name='input')\n",
+    "\n",
+    "    model2 = simple_model(x, scope1='model2', scope2='model1', vv=1.) # Don't need double scopes.\n",
+    "    model1 = simple_model(x, scope1='model1', scope2='model2', vv=2.)\n",
     "    \n",
     "    summary_writer = tf.summary.FileWriter(logdir=os.path.join('./','summaries2', time.strftime('%H-%M-%d-%s_%m-%y')),\n",
     "                                          graph=sess.graph)\n",
     "    \n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    \n",
-    "    hidden = sess.run(model1.output, feed_dict={model1.x: x})\n",
-    "    print(hidden)\n",
+    "    loss = (model1.output - model2_run_output)**2\n",
+    "    op = opt.minimize(loss)\n",
     "    \n",
-    "    hidden = sess.run(model2.output, feed_dict={model2.x: x})\n",
     "    \n",
-    "    hidden = sess.run(model1.output, feed_dict={model1.x: x,\n",
-    "                                                model2.x: x})\n",
-    "    print(hidden)"
+    "    first_action = sess.run(model1.output, feed_dict={model1.x: x})\n",
+    "    \n",
+    "    model2_outout = sess.run(model2.output, feed_dict={model2.x: x})\n",
+    "    \n",
+    "    \n",
+    "    sess.run(op, feed_dict={model1.x: x,\n",
+    "                            model_2_run_output: model2_outout[first_action]})\n",
+    "    \n",
+    "    print(loss_val)"
    ]
   },
   {
@@ -104,31 +115,24 @@
    "outputs": [],
    "source": [
     "class simple_model():\n",
-    "    def __init__(self, scope1='model1', scope2='model2', vv=1.):\n",
+    "    def __init__(self, inp, scope1='model1', scope2='model2', vv=1.):\n",
     "        self.hidden_dim = 4\n",
     "        self.scope1 = scope1\n",
-    "        self.scope2 = scope2\n",
-    "        self.vv = vv\n",
     "        \n",
-    "        self.build_model = self._build_model()\n",
+    "        self.x = tf.placeholder(shape=[None,1], dtype=tf.float32, name='input')\n",
+    "        self.max_a_in = tf.placeholder(shape=[None,1], dtype=tf.float32, name='max_a_in')\n",
     "        \n",
-    "    def _build_model(self):\n",
-    "        self.model_part1 = self.create_model_part1()\n",
-    "        self.model_part2 = self.create_model_part2()\n",
-    "        self.model_part3 = self.create_model_part3()\n",
+    "        self.model = self.create_model()\n",
     "        \n",
-    "    def create_model_part1(self):\n",
-    "        with tf.variable_scope(self.scope1, reuse=tf.AUTO_REUSE):\n",
-    "            self.x = tf.placeholder(shape=[None,1], dtype=tf.float32, name='input')\n",
-    "            self.hidden = tf.layers.dense(self.x, units=self.hidden_dim, name='hidden')\n",
-    "        \n",
-    "    def create_model_part1(self):\n",
-    "        with tf.variable_scope(self.scope2, reuse=tf.AUTO_REUSE):\n",
-    "            self.intermediate = tf.get_variable(name='hidden', shape=[4,1])\n",
+    "    def create_model(self):\n",
+    "        with tf.variable_scope(self.scope1):\n",
+    "            self.hidden = tf.layers.dense(self.input, units=self.hidden_dim, name='hidden1')\n",
+    "            self.output = tf.layers.dense(self.hidden, units=4, name='output')\n",
     "            \n",
-    "    def create_model_part1(self):\n",
-    "        with tf.variable_scope(self.scope1, reuse=tf.AUTO_REUSE):\n",
-    "            self.output = tf.layers.dense(self.intermediate, units=1, name='output')\n"
+    "            self.max_a_out = tf.argmax(self.output, axis=1)\n",
+    "            \n",
+    "            self.output_max1 = tf.gather(self.output, self.max_a_out)\n",
+    "            self.output_max2 = tf.gather(self.output, self.max_a_in)"
    ]
   },
   {
@@ -159,17 +163,73 @@
     "\n",
     "gpu_options = tf.GPUOptions(per_process_gpu_memory_fraction=0.15)\n",
     "with tf.Session(config=tf.ConfigProto(gpu_options=gpu_options)) as sess:\n",
-    "    #model2 = simple_model(scope1='model2', scope2='model1', vv=1.)\n",
-    "    model1 = simple_model(scope1='model1', scope2='model2', vv=2.)\n",
+    "    x = tf.placeholder(shape=[None,1], dtype=tf.float32, name='input')\n",
+    "    model2_run_output = tf.placeholder(shape=[None,1], dtype=tf.float32, name='input')\n",
+    "\n",
+    "    model2 = simple_model(x, scope1='model2', scope2='model1', vv=1.) # Don't need double scopes.\n",
+    "    model1 = simple_model(x, scope1='model1', scope2='model2', vv=2.)\n",
     "    \n",
     "    summary_writer = tf.summary.FileWriter(logdir=os.path.join('./','summaries2', time.strftime('%H-%M-%d-%s_%m-%y')),\n",
     "                                          graph=sess.graph)\n",
     "    \n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    \n",
-    "    hidden = sess.run(model1.output, feed_dict={model1.x: x})\n",
-    "    print(hidden)\n",
+    "    loss = (model1.output - model2_run_output)**2\n",
+    "    op = opt.minimize(loss)\n",
+    "    \n",
+    "    \n",
+    "    max_action = model1.max_a_out\n",
+    "    #sess.run(model1.output, feed_dict={model1.x: x})\n",
+    "    \n",
+    "    model2_outout = sess.run(model2.output, feed_dict={model2.x: x})\n",
+    "    \n",
+    "    \n",
+    "    sess.run(op, feed_dict={model1.x: x,\n",
+    "                            model2.x: x,\n",
+    "                            model_2_run_output: model2_outout[first_action]})\n",
+    "    \n",
+    "    print(loss_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpu_options = tf.GPUOptions(per_process_gpu_memory_fraction=0.05)\n",
+    "with tf.Session(config=tf.ConfigProto(gpu_options=gpu_options)) as sess:\n",
+    "    \n",
+    "    xpred = *tf.ones([5,1])\n",
+    "    xstar = tf.zeros([5,1])\n",
+    "\n",
+    "    loss = huber_loss(xpred, xstar)\n",
+    "\n",
+    "    print(sess.run(loss))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def huber_loss(y_true, y_pred, max_grad=1.):\n",
+    "    \"\"\" Calculates the huber loss. \"\"\"\n",
+    "    err = tf.abs(y_true - y_pred, name='abs')\n",
+    "    mg = tf.constant(max_grad, name='max_grad')\n",
+    "    lin = mg * (err - .5 * mg)\n",
+    "    quad = .5 * err * err\n",
+    "    return tf.reduce_sum(tf.where(err < mg, quad, lin))"
    ]
   },
   {
